{{$NEXT}}

0.067     2013-03-30 00:23:36 America/Los_Angeles

      * Only minor refactoring.  No functional or interface changes.

      * Explicitly requires Term::ANSIColor 2.02 or later.  Thanks CPAN Testers!

      * Requires Pinto::Common 0.068, so you'll have better documentation. 

0.066     2013-03-26 16:18:06 America/Los_Angeles

     HEADLINES:

     * Your MUST uninstall both Pinto and App::Pinto before installing this.

     * For local repositories, you'll need to have App::Pinto 0.066 or later.

     * This release is not (yet) compatible with any Pinto::Server.


     IMPORTANT:

     Bad news:  This version of Pinto is not compatible with *existing* 
     repositories.  To migrate, you'll need to create a new repository 
     (using this version of Pinto) and then "pull" all the distributons 
     from your old repository into the new one.  Repeat this process for 
     each stack.  Unfortunatley, you will loose your revision history.  If
     you bug me about it, I'll write a script to automate this for you.  I
     am thaljef@cpan.org.

     Good news:  This version of Pinto has hooks to do future migrations
     automatically.  So any repository you create with *this version*
     of Pinto can be easily migrated to any future versions. I'm also pretty
     confident that the schema is now stable, so a migration will not be
     required for a while.


     CHANGES:

     * Switched from using Archive::Tar to Archive::Extract.  The
     latter will attempt to use tar(1) to unpack the archive,
     which works much better with older archives.  This is a bit
     slower however.  If you don't have tar(1), it falls back
     to using Archive::Tar internally.

     * Switched from using HTTP::UserAgent to HTTP::Tiny.  This cuts out
     one non-core dependency.  But some of Pinto's upstream dependencies
     probably still use HTTP::UserAgent, so the net effect is moot.

     * The version control subsystem has been completely redesigned.