@@ -1,5 +1,13 @@
 {{$NEXT}}
 
+      * Pinto now unregisters all packages from an existing distribution
+      when an incoming distribution has any packages that overlap with the 
+      exsting distribution.  This way, your stack will never contain some 
+      package from one distribution and some packages from another.  To get 
+      the old behavior (which is more like PAUSE) then set the 
+      "allow_overlapping_distributions" stack property to 1.  Thanks to 
+      Schwern for suggesting this.
+
 0.067     2013-03-30 00:23:36 America/Los_Angeles
 
       * Only minor refactoring.  No functional or interface changes.
